Do not modify input in ArpDecoder.decode()
Binding DTOs are expected to be immutable: do not attempt to modify
input list, but rather create a copy of it.

Change-Id: Iff1f00afc639627c0ea4bf561538127ee0557ad0
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>